[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lepton-gradio"
version = "0.1.0"
description = "A Python package for creating Gradio applications with Lepton AI models"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "gradio>=5.0.2",
    "leptonai",
    "openai"
]

[project.urls]
homepage = "https://github.com/your-username/lepton-gradio"
repository = "https://github.com/your-username/lepton-gradio"

[project.optional-dependencies]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["lepton_gradio"]
